scss/templates/components/dc-sidebar.scss
.dc-sidebar {
  color: $gray-100;
  position: fixed;
  width: inherit;

  .scrollable-area {
    height: calc(
      100vh - #{$header-height + $dc-categories-height-base + $spacer * 3}
    );
    overflow-y: auto;
  }

  > .list-unstyled > li:first-of-type {
    margin-top: $spacer * 1.5;
  }

  > .list-unstyled > li:last-of-type {
    margin-bottom: $spacer * 1.5;
  }

  &,
  .sidebar-raw-link,
  .list-item a {
    color: inherit;
    font-size: $font-size-base;
    line-height: 2.25;
  }

  .sidebar-raw-link,
  .list-item a {
    transition: all 0.216s linear;
    text-decoration: none;
  }

  .sidebar-raw-link.active,
  .sidebar-raw-link:hover,
  .list-item a:hover,
  .list-item.active > .sidebar-link > a {
    font-weight: $font-weight-bold;
  }

  .list-item a:hover {
    color: inherit;
  }

  .sidebar-raw-link.active,
  .sidebar-raw-link:hover {
    color: $primary;
  }

  .list-nested:not(.expanded) {
    display: none;
  }
}

.dc-sidebar-hack-width .dc-sidebar {
  max-width: 255px;
}

// Specificity matter so we don't affect deep nested sidebar-link
.list-item:not(.active) > .sidebar-link > .dynamic-hover-color:not(:hover) {
  // Allows to get hover color from inline style
  color: inherit !important;
}

